--- a/index.html
+++ b/index.html
@@ -523,7 +523,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-purple-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  background-color: #5d5dff;
+}
+  
+.bg-purple-700 {
+  --tw-bg-opacity: 1;
+  background-color: #4b4acf;
 }
 
 .px-4 {
@@ -585,14 +590,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-}
-
-.bg-purple-600 {
-  color: #5d5dff;  
-}
-  
-.bg-purple-700 {
-  color: #4b4acf;  
 }
 
 .h1 {
