--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ button:focus {
 
 .hover\:bg-purple-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
+  background-color: #4b4acf;
 }
 
 @media (min-width: 640px) {
